03-alb-ingress/6-ingress-target-type-ip/app2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp2
spec:
  selector:
    matchLabels:
      app: myapp2
  template:
    metadata:
      labels:
        app: myapp2
    spec:
      containers:
        - name: myapp2
          image: jasmeetsingh94/ingress-app2:1.0
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: app2-svc
  labels:
    app: app2-nginx
  annotations: 
      alb.ingress.kubernetes.io/healthcheck-path: /app2/index.html
spec:
  type: ClusterIP
  selector:
    app: myapp2
  ports:
    - port: 80
      targetPort: 80
